// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`components/SearchForm > renders correctly 1`] = `
<div>
  <form
    class="search-form"
  >
    <fieldset
      class="search-form-fieldset"
    >
      <div
        class="form-group"
      >
        <label
          class="form-label"
        >
          Ваш пол
        </label>
        <div
          class="radio-group"
        >
          <label
            class="radio-item "
          >
            <input
              name="myGender"
              type="radio"
              value="male"
            />
            👨 Мужской
          </label>
          <label
            class="radio-item "
          >
            <input
              name="myGender"
              type="radio"
              value="female"
            />
            👩 Женский
          </label>
        </div>
      </div>
      <div
        class="form-group"
      >
        <label
          class="form-label"
          for="myAge"
        >
          Ваш возраст
        </label>
        <input
          class="form-input"
          id="myAge"
          max="100"
          min="18"
          name="myAge"
          placeholder="Введите ваш возраст"
          type="number"
          value=""
        />
      </div>
      <div
        class="form-group"
      >
        <label
          class="form-label"
        >
          Пол собеседника
        </label>
        <div
          class="radio-group"
        >
          <label
            class="radio-item "
          >
            <input
              name="targetGender"
              type="radio"
              value="male"
            />
            👨 Мужской
          </label>
          <label
            class="radio-item "
          >
            <input
              name="targetGender"
              type="radio"
              value="female"
            />
            👩 Женский
          </label>
          <label
            class="radio-item "
          >
            <input
              name="targetGender"
              type="radio"
              value="any"
            />
            🤝 Любой
          </label>
        </div>
      </div>
      <div
        class="form-group"
      >
        <label
          class="form-label"
        >
          Возраст собеседника
        </label>
        <div
          class="age-range"
        >
          <div>
            <input
              class="form-input"
              max="100"
              min="18"
              name="targetAgeMin"
              placeholder="От"
              type="number"
              value=""
            />
          </div>
          <div>
            <input
              class="form-input"
              max="100"
              min="18"
              name="targetAgeMax"
              placeholder="До"
              type="number"
              value=""
            />
          </div>
        </div>
      </div>
      <div
        class="form-group"
      >
        <label
          class="checkbox-item "
        >
          <input
            name="useLocation"
            type="checkbox"
          />
          <span
            style="color: var(--tg-theme-text-color, #000);"
          >
            📍 Искать ближайших собеседников
          </span>
        </label>
      </div>
      <button
        class="submit-button"
        disabled=""
        type="submit"
      >
        💬 Начать поиск
      </button>
      <div
        style="margin-top: 16px; font-size: 14px; color: var(--tg-theme-hint-color, #999); text-align: center;"
      >
        Запустите через Telegram для полного функционала
      </div>
    </fieldset>
  </form>
</div>
`;

exports[`components/SearchForm renders correctly 1`] = `
<form
  className="search-form"
  onSubmit={[Function]}
>
  <fieldset
    className="search-form-fieldset"
    disabled={false}
  >
    <div
      className="form-group"
    >
      <label
        className="form-label"
      >
        Ваш пол
      </label>
      <div
        className="radio-group"
      >
        <label
          className="radio-item "
        >
          <input
            checked={false}
            name="myGender"
            onChange={[Function]}
            type="radio"
            value="male"
          />
          👨 Мужской
        </label>
        <label
          className="radio-item "
        >
          <input
            checked={false}
            name="myGender"
            onChange={[Function]}
            type="radio"
            value="female"
          />
          👩 Женский
        </label>
      </div>
    </div>
    <div
      className="form-group"
    >
      <label
        className="form-label"
        htmlFor="myAge"
      >
        Ваш возраст
      </label>
      <input
        className="form-input"
        id="myAge"
        max="100"
        min="18"
        name="myAge"
        onChange={[Function]}
        placeholder="Введите ваш возраст"
        type="number"
        value=""
      />
    </div>
    <div
      className="form-group"
    >
      <label
        className="form-label"
      >
        Пол собеседника
      </label>
      <div
        className="radio-group"
      >
        <label
          className="radio-item "
        >
          <input
            checked={false}
            name="targetGender"
            onChange={[Function]}
            type="radio"
            value="male"
          />
          👨 Мужской
        </label>
        <label
          className="radio-item "
        >
          <input
            checked={false}
            name="targetGender"
            onChange={[Function]}
            type="radio"
            value="female"
          />
          👩 Женский
        </label>
        <label
          className="radio-item "
        >
          <input
            checked={false}
            name="targetGender"
            onChange={[Function]}
            type="radio"
            value="any"
          />
          🤝 Любой
        </label>
      </div>
    </div>
    <div
      className="form-group"
    >
      <label
        className="form-label"
      >
        Возраст собеседника
      </label>
      <div
        className="age-range"
      >
        <div>
          <input
            className="form-input"
            max="100"
            min="18"
            name="targetAgeMin"
            onChange={[Function]}
            placeholder="От"
            type="number"
            value=""
          />
        </div>
        <div>
          <input
            className="form-input"
            max="100"
            min="18"
            name="targetAgeMax"
            onChange={[Function]}
            placeholder="До"
            type="number"
            value=""
          />
        </div>
      </div>
    </div>
    <div
      className="form-group"
    >
      <label
        className="checkbox-item "
      >
        <input
          checked={false}
          name="useLocation"
          onChange={[Function]}
          type="checkbox"
        />
        <span
          style={
            Object {
              "color": "var(--tg-theme-text-color, #000)",
            }
          }
        >
          📍 Искать ближайших собеседников
        </span>
      </label>
    </div>
    <button
      className="submit-button"
      disabled={true}
      type="submit"
    >
      💬 Начать поиск
    </button>
    <div
      style={
        Object {
          "color": "var(--tg-theme-hint-color, #999)",
          "fontSize": "14px",
          "marginTop": "16px",
          "textAlign": "center",
        }
      }
    >
      Запустите через Telegram для полного функционала
    </div>
  </fieldset>
</form>
`;
